<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@color/cardview_light_background"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/list_dialog_progress_bar_key"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_dialog_header_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_dialog_header"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/list_dialog_progress_bar_key"
        app:layout_constraintTop_toBottomOf="@+id/list_dialog_progress_bar_key" />

    <TextView
        android:id="@+id/list_dialog_sub_header_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/list_dialog_sub_header"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_dialog_header_key" />

    <ListView
        android:id="@+id/list_dialog_list_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/list_dialog_sub_header_key" />

    <Button
        android:id="@+id/list_dialog_button_button_left_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="4dp"
        android:text="@string/list_dialog_button_button_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_dialog_list_key" />

    <Button
        android:id="@+id/list_dialog_button_button_center_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="4dp"
        android:text="@string/list_dialog_button_button_center"
        app:layout_constraintEnd_toStartOf="@+id/list_dialog_button_button_right_key"
        app:layout_constraintStart_toEndOf="@+id/list_dialog_button_button_left_key"
        app:layout_constraintTop_toBottomOf="@+id/list_dialog_list_key" />

    <Button
        android:id="@+id/list_dialog_button_button_right_key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="4dp"
        android:text="@string/list_dialog_button_button_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_dialog_list_key" />
</androidx.constraintlayout.widget.ConstraintLayout>