<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/list_dialog_element_icon"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/ic_fragment_ble_blue" />

    <TextView
        android:id="@+id/list_dialog_element_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/str_placeholder_name"
        android:textColor="@color/teal_200"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/list_dialog_element_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/list_dialog_element_sub_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="3dp"
        android:text="@string/str_placeholder_id"
        android:textColor="@color/gray_dark"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/list_dialog_element_icon"
        app:layout_constraintTop_toBottomOf="@+id/list_dialog_element_header" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>